fix manifest brakes

--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#302b63",
   "icons": [
     {
-      "src": "ROS_Fav_Icon.png",
+      "src": "./assets/ROS_Fav_Icon.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "ROS_Fav_Icon.png",
+      "src": "./assets/ROS_Fav_Icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
