--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "ROS",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#302b63",
-  "theme_color": "#302b63",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "./assets/ROS_Fav_Icon.png",
